# MyCodes

./: .gitignore  readme.md
CG_USTC/: .gitignore
CG_USTC/Homeworks/3_PoissonImageEditing/project/: CMakeLists.txt
CG_USTC/Homeworks/3_PoissonImageEditing/project/src/App/: ImageWidget.cpp  ImageWidget.h  mask.cpp  mask.h
ComputerGraphics/src/homework1/: matrix_main.cpp
MachineLearning/: .gitignore
MachineLearning/lab1/: Loan.ipynb  Logistic.py  report.docx
MachineLearning/lab2/: main.ipynb
MachineLearning/lab3/: readme.md
MachineLearning/lab5/: dist.ipynb  funs.py  main.ipynb  main_xhy.ipynb  preprocessed.ipynb  report.docx  test.ipynb
MachineLearning/lab5/Dataset/: feature_importance.csv  test_label.csv
NPDE/: .gitignore
NPDE/hw1/src/: CMakeLists.txt  main.cpp
NumericalAlgebra/: readme.md
NumericalAlgebra/documents/: check_4.nb  report_1.md  report_2.md  report_3.md  report_4.md  report_5.md  report_7.md  report_8.md
NumericalAlgebra/include/: Err.h  Function.cpp  Function.h  ImplictQR.cpp  ImplictQR.h  QR.h  SVD.h  Solve.cpp  Solve.h  Symmetric.h
NumericalAlgebra/src/SVD/: Homework8.sln
NumericalAlgebra/src/第一章/: Homework1.sln  Homework1.vcxproj  Homework1.vcxproj.filters
NumericalAlgebra/src/第七章/: Homework7.sln
OR/动态规划/: 实验报告.md
OR/无约束优化/: 实验报告.md
WaveletAnalysis/final/: loop.m  main_loop.m
WaveletAnalysis/hw1/: Lagrange.m  TotalVariation.nb  calChebshev.m  getChebshevArgs.m  main.m  main2.m  main3.m  myFFT.m
WaveletAnalysis/hw2/: main.m  main2.m  main3.m  main4.m  main5.m
WaveletAnalysis/hw3/: loop.ipynb
(+75 files in other folders)
